--- a/PY0101EN-1-2-Strings.ipynb
+++ b/PY0101EN-1-2-Strings.ipynb
@@ -1035,20 +1035,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "\"1\"\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "What is the value of the variable <code>b</code> after the following code is executed?\n"
    ]
   },
@@ -1068,20 +1054,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "\"2\"\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "What is the value of the variable <code>c</code> after the following code is executed?\n"
    ]
   },
@@ -1095,20 +1067,6 @@
     "\n",
     "c = a + b\n",
     "# its value is \"12\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "\"12\"\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
    ]
   },
   {
@@ -1149,24 +1107,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "print(d[:3]) \n",
-    "\n",
-    "# or \n",
-    "\n",
-    "print(d[0:3])\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<hr>\n"
    ]
   },
@@ -1179,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1195,20 +1135,6 @@
     "\n",
     "e = 'clocrkr1e1c1t'\n",
     "print(e[::2])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "print(e[::2])\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
    ]
   },
   {
@@ -1241,24 +1167,6 @@
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "print(\"\\\\\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "print(\"\\\\\\\\\")\n",
-    "\n",
-    "or\n",
-    "\n",
-    "print(r\"\\ \")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
    ]
   },
   {
@@ -1302,20 +1210,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "f.upper()\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<hr>\n"
    ]
   },
@@ -1329,7 +1223,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1352,30 +1248,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "g.find(\"snow\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the variable <code>g</code>, replace the sub-string <code>Mary</code> with <code>Bob</code>:\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1391,20 +1268,6 @@
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "g.replace(\"Mary\", \"Bob\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Click here for the solution</summary>\n",
-    "\n",
-    "```python\n",
-    "g.replace(\"Mary\", \"Bob\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "</details>\n"
    ]
   },
   {
